--- a/2.webpack-sample-project/.babelrc
+++ b/2.webpack-sample-project/.babelrc
@@ -1,5 +1,23 @@
 {
-    presets: [
+    "presets": [
         "es2015", "react"
-    ]
+    ],
+    "env": {
+		"development": {
+		"plugins": [
+			[
+				"react-transform", 
+				{
+			    	"transforms": [{
+					    "transform": "react-transform-hmr",
+					     
+					    "imports": ["react"],
+					     
+					    "locals": ["module"]
+			    	}]
+				}
+			]
+		]
+    }
+  }
 }
