--- a/2.webpack-sample-project/package.json
+++ b/2.webpack-sample-project/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "server": "webpack-dev-server --open"
+    "server": "webpack-dev-server --open",
+    "build":  "set NODE_ENV=production &&webpack --config ./webpack.production.config.js --progress"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +15,14 @@
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.9",
+    "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.19.0",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
