--- a/5.webpack-fx-all/package.json
+++ b/5.webpack-fx-all/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server --open --config webpack.config.js",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
@@ -14,16 +14,21 @@
     "ajv": "^6.2.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
+    "babel-plugin-component": "^1.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
+    "compression-webpack-plugin": "^1.1.10",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
+    "element-ui": "^2.2.1",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
+    "json-loader": "^0.5.7",
     "less": "^2.3.1",
     "less-loader": "^4.0.6",
     "lodash": "^4.17.5",
