--- a/5.webpack-fx-all/package.json
+++ b/5.webpack-fx-all/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "ajv": "^6.2.0",
+    "autoprefixer": "^8.1.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-plugin-component": "^1.1.0",
@@ -27,12 +28,14 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "^2.30.1",
+    "istanbul-instrumenter-loader": "^3.0.0",
     "jquery": "^3.3.1",
     "json-loader": "^0.5.7",
     "less": "^2.3.1",
     "less-loader": "^4.0.6",
     "lodash": "^4.17.5",
     "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
     "sass": "^1.0.0-beta.5.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
