--- a/0.webpack-gw-lx/package.json
+++ b/0.webpack-gw-lx/package.json
@@ -36,6 +36,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.10",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.3.1",
     "less": "^2.3.1",
     "less-loader": "^4.0.6",
     "node-sass": "^4.7.2",
@@ -46,7 +47,7 @@
     "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.9",
+    "webpack-cli": "^2.0.0",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^4.1.2",
